# AgentTools

./: .coverage  .env.example  .gitignore  AGENTS.md  BLOG_DADUDEKC.md  BLOG_DREAMSCAPE.md  BLOG_WEARESWARM.md  BRANCH_CLEANUP_STATUS.md  CHANGELOG.md  CODEBASE_AUDIT_REPORT.md  CONSOLIDATION_PLAN.md  CONTRIBUTING.md  DEFINITION_OF_DONE.md  DEPENDENCIES.md  EXECUTION_SUMMARY.md  LICENSE  LICENSE.md  MASTER_TASK_LIST.md  MASTER_TASK_LOG.md  MCP_CONVERSION_MASTER_PLAN.md  MCP_CONVERSION_STATUS_REPORT.md  MCP_CONVERSION_TEAM_ACTIVATION.md  MISSION_BRIEF_FIRST_CONTACT.md  NEXT_UP.md  PHASE_0A_ORGANIZATION_PLAN.md  PRD.md  PRODUCTION_READINESS.md  PROJECT_AUDIT_REPORT.md  PROJECT_REVIEW.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_TREE.md  QA_VALIDATION_REPORT.md  QUICK_START_PHASE0A.md  README.md  ROADMAP.md  SETUP_GUIDE.md  SSOT_CLEANUP_REPORT.md  TOOLS_CONSOLIDATION_PLAN.md  TOOLS_FLATTENING_PLAN.md  TOOLS_USAGE_GUIDE.md  (+41 more)
.cursor/: mcp.json
config/: cycle_points.json
data/: message_history.json  metrics_history.json
devlogs/: 2026-01-12_agent-2_agent6_coordination_message.md  2026-01-12_agent-2_coordination_acceptance.md  2026-01-12_agent-2_coordination_response.md  2026-01-12_agent-2_coordination_response_to_agent4.md  2026-01-12_agent-2_deployment_coordination_response.md  2026-01-12_agent-2_deployment_mission_report.md  2026-01-12_agent-2_deployment_readiness_assessment.md  2026-01-12_agent-2_discord_event_integration.md  2026-01-12_agent-2_event_infrastructure_implementation.md  2026-01-12_agent-2_messaging_services_integration.md  2026-01-12_agent-2_phase2_coordination_deployment.md  2026-01-12_agent-2_phase2_status_report.md  2026-01-12_agent-2_team_formation_announcement.md  2026-01-12_agent-2_website_audit_complete.md  2026-01-12_agent-5_agent8_coordination_response.md  2026-01-12_agent-5_package_publishing_coordination.md  2026-01-12_agent-5_s2a_onboarding_closure.md  2026-01-12_agent_status_requests.md  2026-01-12_swarm_reconvening_status.md
docs/: ARCHIVE_POINTER.md  BUILDING_AGENTS.md  CODEBASE_RECON_AND_EXECUTION_PLAN.md  DOCS_DIGEST.md  LEGACY_TOOL_MIGRATION_MATRIX.json  LEGACY_TOOL_MIGRATION_MATRIX.md  MCP_TOOLS_ROADMAP.md  TOOLBELT_SURFACE_AUDIT.json  mvp.md  (+4 more)
tools/: cli.py  (+32 more)
(+660 files in other folders)
