[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swarm-mcp"
version = "0.1.0"
description = "ðŸº WE ARE SWARM - Multi-Agent AI Coordination Framework with consensus voting, conflict detection, capability learning, and work verification"
readme = "README.md"
license = "MIT"
authors = [
    { name = "The Swarm" }
]
keywords = [
    "ai", "agents", "multi-agent", "swarm", "mcp", "model-context-protocol",
    "coordination", "llm", "claude", "gpt", "automation", "consensus",
    "conflict-detection", "machine-learning-free", "ai-orchestration"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
full = [
    "pyautogui>=0.9",
    "paramiko>=3.0",
    "requests>=2.28",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/swarm-team/swarm-mcp"
Documentation = "https://github.com/swarm-team/swarm-mcp#readme"
Repository = "https://github.com/swarm-team/swarm-mcp"
Issues = "https://github.com/swarm-team/swarm-mcp/issues"

[project.scripts]
swarm = "swarm_mcp.cli:main"
swarm-messaging-server = "swarm_mcp.servers.messaging:main"

[tool.hatch.build.targets.wheel]
packages = ["swarm_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
